azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "projectName": {
        "type": "string",
        "metadata": {
          "description": "Specifies a project name that is used for generating resource names."
        }
      },
      "location": {
        "type": "string",
        "allowedValues": [
          "centralus",
          "eastus",
          "eastus2",
          "westus2",
          "francecentral",
          "northeurope",
          "uksouth",
          "westeurope",
          "japaneast",
          "southeastasia"
        ],
        "metadata": {
          "description": "Specifies the location for all of the resources created by this template. Availability zones are only supported in certain regions.  For the last supported zones, see https://docs.microsoft.com/en-us/azure/availability-zones/az-overview#services-support-by-region."
        }
      },
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Specifies the virtual machine administrator username."
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Specifies the virtual machine administrator password."
        }
      }
    },
    "variables": {
      "lbName": "[concat(parameters('projectName'),'-lb')]",
      "lbSkuName": "Standard",
      "lbPublicIpAddressName1": "[concat(parameters('projectName'),'-lbPublicIP1')]",
      "lbPublicIpAddressName2": "[concat(parameters('projectName'),'-lbPublicIP2')]",
      "lbFrontEndName": "LoadBalancerFrontEnd",
      "lbBackendPoolName": "LoadBalancerBackEndPool",
      "lbProbeName": "loadBalancerHealthProbe",
      "nsgName": "[concat(parameters('projectName'),'-nsg')]",
      "vNetName": "[concat(parameters('projectName'),'-vnet')]",
      "vNetAddressPrefix": "10.0.1.0/24",
      "vNetSubnetName": "BackendSubnet",
      "vNetSubnetAddressPrefix": "10.0.1.0/24",
      "vmSize": "Standard_DS1_v2",
      "vmStorageAccountType": "Premium_LRS"
    },
    "resources": [
      {
        "type": "Microsoft.Network/loadBalancers",
        "apiVersion": "2018-12-01",
        "name": "[variables('lbName')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "[variables('lbSkuName')]"
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses', variables('lbPublicIpAddressName1'))]",
          "[resourceId('Microsoft.Network/publicIPAddresses', variables('lbPublicIpAddressName2'))]"
        ],
        "properties": {
          "frontendIPConfigurations": [
            {
              "name": "[variables('lbFrontEndName1')]",
              "properties": {
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('lbPublicIpAddressName1'))]"
                }
              }
            },
            {
                "name": "[variables('lbFrontEndName2')]",
                "properties": {
                  "publicIPAddress": {
                    "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('lbPublicIpAddressName2'))]"
                  }
                }
            }
          ],
          "backendAddressPools": [
            {
              "name": "[variables('lbBackendPoolName')]"
            }
          ],
          "loadBalancingRules": [
            {
              "name": "HTTPLBRule1",
              "properties": {
                "frontendIPConfiguration": {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('lbName'), variables('lbFrontEndName1'))]"
                },
                "backendAddressPool": {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', variables('lbName'), variables('lbBackendPoolName'))]"
                },
                "frontendPort": 0,
                "backendPort": 0,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp",
                "enableTcpReset": false,
                "loadDistribution": "Default",
                "disableOutboundSnat": false,
                "probe": {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/probes', variables('lbName'), variables('lbProbeName'))]"
                }
              }
            },
            {
                "name": "HTTPLBRule2",
                "properties": {
                  "frontendIPConfiguration": {
                    "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('lbName'), variables('lbFrontEndName2'))]"
                  },
                  "backendAddressPool": {
                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', variables('lbName'), variables('lbBackendPoolName'))]"
                  },
                  "frontendPort": 0,
                  "backendPort": 0,
                  "enableFloatingIP": false,
                  "idleTimeoutInMinutes": 4,
                  "protocol": "Tcp",
                  "enableTcpReset": false,
                  "loadDistribution": "Default",
                  "disableOutboundSnat": false,
                  "probe": {
                    "id": "[resourceId('Microsoft.Network/loadBalancers/probes', variables('lbName'), variables('lbProbeName'))]"
                  }
                }
            }
          ],
          "probes": [
            {
              "name": "[variables('lbProbeName')]",
              "properties": {
                "protocol": "Http",
                "port": 80,
                "requestPath": "/",
                "intervalInSeconds": 5,
                "numberOfProbes": 2
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2018-12-01",
        "name": "[variables('lbPublicIPAddressName1')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "[variables('lbSkuName')]"
        },
        "properties": {
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Static"
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2018-12-01",
        "name": "[variables('lbPublicIPAddressName2')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "[variables('lbSkuName')]"
        },
        "properties": {
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Static"
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2018-12-01",
        "name": "[variables('nsgName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowHTTPInbound",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "default-allow-rdp",
              "properties": {
                "priority": 1000,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "3389"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2018-12-01",
        "name": "[variables('vNetName')]",
        "location": "[parameters('location')]",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('vNetAddressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[variables('vNetSubnetName')]",
              "properties": {
                "addressPrefix": "[variables('vNetSubnetAddressPrefix')]"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2018-10-01",
        "name": "[concat(parameters('projectName'),'-vm', copyIndex(1))]",
        "location": "[parameters('location')]",
        "zones": [
          "[copyIndex(1)]"
        ],
        "copy": {
          "name": "vmCopy",
          "count": 3
        },
        "dependsOn": [
          "networkInterfaceCopy"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[variables('vmSize')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "MicrosoftWindowsServer",
              "offer": "WindowsServer",
              "sku": "2019-Datacenter",
              "version": "latest"
            },
            "osDisk": {
              "createOption": "fromImage",
              "managedDisk": {
                "storageAccountType": "[variables('vmStorageAccountType')]"
              }
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('projectName'),'-vm', copyIndex(1), '-networkInterface'))]"
              }
            ]
          },
          "osProfile": {
            "computerName": "[concat(parameters('projectName'),'-vm', copyIndex(1))]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "windowsConfiguration": {
              "enableAutomaticUpdates": true,
              "provisionVmAgent": true
            }
          }
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2018-12-01",
        "name": "[concat(parameters('projectName'),'-vm', copyIndex(1), '-publicIp')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "Standard"
        },
        "copy": {
          "name": "publicIPAddressCopy",
          "count": 3
        },
        "properties": {
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Static"
        }
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2018-12-01",
        "name": "[concat(parameters('projectName'),'-vm', copyIndex(1), '-networkInterface')]",
        "location": "[parameters('location')]",
        "copy": {
          "name": "networkInterfaceCopy",
          "count": 3
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/virtualNetworks/', variables('vNetName'))]",
          "[resourceId('Microsoft.Network/loadBalancers/', variables('lbName'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]",
          "publicIPAddressCopy"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vNetName'), variables('vNetSubnetName'))]"
                },
                "publicIpAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIpAddresses', concat(parameters('projectName'),'-vm', copyIndex(1), '-publicIp'))]"
                },
                "loadBalancerBackendAddressPools": [
                  {
                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', variables('lbName'), variables('lbBackendPoolName'))]"
                  }
                ]
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
          }
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "apiVersion": "2018-10-01",
        "name": "[concat(parameters('projectName'),'-vm', copyIndex(1), '/', 'InstallWebServer')]",
        "location": "[parameters('location')]",
        "copy": {
          "name": "extensionCopy",
          "count": 3
        },
        "dependsOn": [
          "vmCopy"
        ],
        "properties": {
          "publisher": "Microsoft.Compute",
          "type": "CustomScriptExtension",
          "typeHandlerVersion": "1.7",
          "autoUpgradeMinorVersion": true,
          "settings": {
            "commandToExecute": "powershell.exe Install-WindowsFeature -name Web-Server -IncludeManagementTools && powershell.exe remove-item 'C:\\inetpub\\wwwroot\\iisstart.htm' && powershell.exe Add-Content -Path 'C:\\inetpub\\wwwroot\\iisstart.htm' -Value $('Hello World from ' + $env:computername)"
          }
        }
      }
    ]
  }
